--- a/css/style.css
+++ b/css/style.css
@@ -777,4 +777,9 @@ form .subscribe--btn:hover{
         padding: 80px 20px;
         width: 500px;
     }
+
+    .row .col-xxs {
+        flex: 0 0 auto;
+        width: 100%
+    }
 }
