--- a/css/style.css
+++ b/css/style.css
@@ -1263,32 +1263,36 @@ form .subscribe--btn:hover{
 
 .page--title--container {
     background: linear-gradient(79deg, rgba(2,0,36,1) 0%, rgba(0,76,166,1) 61%, rgba(4,101,69,1) 100%);
-    height: auto;
+    height: 300px;
     padding: 10px 50px;
-    text-align: center;
     overflow: hidden;
+    position: relative;
 }
 
 .page--title--container h1 {
     color: #fff;
-    display: inline-block;
     font-family: "Roboto", sans-serif;
     font-size: 5rem;
     font-weight: 700;
-    width: 600px;
-    padding: 30px 200px 0px 0px;
-    margin-right: 300px;
+    position: absolute;
+    left: 10%;
+    top: 130px;
+    z-index: 1000000;
+    text-align: center;
 }
 
 .page--title--container img {
     width: 400px;
-    display: inline-block;
+    height: 250px;
+    position: absolute;
+    right: 10%;
+    top: 30px;
 }
 
 .about--us--container {
     text-align: center;
-    margin: 100px 0;
-    height: 400px;
+    margin: 100px 0px;
+    height: auto;
 }
 
 .about--us--logo--container img {
@@ -1298,17 +1302,14 @@ form .subscribe--btn:hover{
     border-top-right-radius: 100px;
     border-bottom-right-radius: 0px;
     border-bottom-left-radius: 100px;
+    margin-top: 50px;
 }
 
 .about--us--logo--container {
-    float: left;
-    width: 50%;
     margin-top: 50px;
 }
 
 .about--us--content{
-    width: 50%;
-    float: right;
     margin-top: 50px;
 }
 
@@ -1317,7 +1318,7 @@ form .subscribe--btn:hover{
     color: #0054a6;
     text-align: left;
     font-family: 'Roboto', sans-serif;
-    font-size: 3.5rem;
+    font-size: 3rem;
     font-weight: 700;
 }
 
@@ -1329,39 +1330,23 @@ form .subscribe--btn:hover{
     padding-top: 20px;
 }
 
-.what--we--do {
+.wwd {
     background-color: #E4E4E4;
     height: auto;
     clear: both;
-    text-align: center;
+    padding: 100px;
 }
 
-.about--us--text--2--img {
-    display: inline-block;
-    width: 400px;
-}
-
-.about--us--text--2{
-    display: inline-block;
-    width: 600px;
-    margin: 200px 200px 100px 0px;
-}
-
-.about--us--text--2--img img {
-    width: 400px;
-    position: relative;
-    top: -110px;
-}
-
-.about--us--text--2 h1 {
+.wwd .row .col h1 {
     color: #0054a6;
     text-align: left;
     font-family: 'Roboto', sans-serif;
-    font-size: 3.5rem;
+    font-size: 3rem;
     font-weight: 700;
+    margin-top: 50px;
 }
 
-.about--us--text--2 p{
+.wwd .row .col p {
     text-align: left;
     font-family: "Montserrat", sans-serif;
     font-size: 1.8rem;
@@ -1369,48 +1354,42 @@ form .subscribe--btn:hover{
     padding-top: 20px;
 }
 
+.wwd .row .col .about--us--wwd--img {
+    text-align: center;
+}
+
+.wwd .row .col .about--us--wwd--img img{
+    width: 400px;
+}
 
 .about--mmf {
     height: auto;
-    display: flex;
-    justify-content: space-evenly;
+    margin: 100px 0px;
 }
 
-.about--mmf .its--mission, .about--mmf .its--management, .about--mmf .its--faculty {
-    width: 400px;
-    margin: 100px 20px;
-}
-
-.about--mmf .its--mission h1, .about--mmf .its--management h1, .about--mmf .its--faculty h1 {
+.about--mmf  h1 {
     color: #0054a6;
     text-align: left;
     font-family: 'Roboto', sans-serif;
-    font-size: 2.5rem;
+    font-size: 3rem;
     font-weight: 700;
     padding-bottom: 20px;
+    margin: 0px 20px;
 }
 
-.about--mmf .its--mission p, .about--mmf .its--management p, .about--mmf .its--faculty p {
+.about--mmf p {
     text-align: left;
     font-family: 'Montserrat', sans-serif;
     font-size: 1.8rem;
+    margin: 0px 20px 30px;
 }
 
 .about--us--the--event {
     height: auto;
 }
 
-.about--us--the--event h1 {
-    padding: 50px 0px;
-    text-align: center;
-    color: #0054a6;
-    font-family: 'Roboto', sans-serif;
-    font-size: 3.5rem;
-    font-weight: 700;
-}
-
 .about--us--the--event .row {
-    margin: 0px 50px;
+    margin: 0px 20px;
 }
 
 .about--us--the--event .row .col-lg-6 {
@@ -1423,17 +1402,34 @@ form .subscribe--btn:hover{
     overflow: hidden;
 }
 
-.about--us--the--event .row .col-lg-6 p{
+.about--us--the--event h1 {
+    padding: 50px 0px;
+    text-align: center;
+    color: #0054a6;
+    font-family: 'Roboto', sans-serif;
+    font-size: 3rem;
+    font-weight: 700;
+}
+.about--us--the--event p{
     text-align: left;
     font-family: "Montserrat", sans-serif;
     font-size: 1.8rem;
     line-height: 1.5;
 }
 
+.custom--hr {
+    width: 30%;
+    margin: 0 auto;
+    border-top: dotted 10px #0054a6;
+    background-color: transparent;
+    margin-bottom: 50px;
+}
+
 .about--us--the--TPA {
     height: 600px;
     background-color: #e4e4e4;
     margin-top: 100px;
+    height: auto;
 }
 
 .about--us--the--TPA h1 {
@@ -1441,7 +1437,7 @@ form .subscribe--btn:hover{
     text-align: center;
     color: #0054a6;
     font-family: 'Roboto', sans-serif;
-    font-size: 3.5rem;
+    font-size: 3rem;
     font-weight: 700;   
 }
 
@@ -1473,4 +1469,334 @@ form .subscribe--btn:hover{
 
 .all--event--container, .all--courses--container {
     margin-top: 30px;
+}
+
+/***all Testimonial card***/
+
+.tes--card {
+    width: 400px;
+}
+
+.tes--card .tes--feature--img {
+    width: 70px;
+    height: 70px;
+    border-radius: 100px;
+    margin: 50px 30px;
+    border: 1px solid #e4e4e4;
+}
+
+.tes--card .row .card-body .card-title {
+    font-family: "Roboto",sans-serif;
+    font-size: 1.5rem;
+    padding-top: 5px;
+}
+
+.tes--card .row .card-body span {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1;
+    line-height: 1.2;
+}
+
+.tes--card .row .card-body a {
+    font-family: "Montserrat", sans-serif;
+    font-size: 1.5rem;
+    color: #0054a6;
+    display: block;
+    text-decoration: none;
+    padding-top: 10px;
+}
+
+.tes--card .row .card-body a:hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+.tes--card .row .tes--modal--title {
+    font-family: 'Roboto',sans-serif;
+    font-size: 2rem;
+    font-weight: 700;
+    text-align: left;
+}
+
+.tes--card .row .tes--modal--body--content p {
+    font-family: 'Montserrat',sans-serif;
+    font-size: 1.5rem;
+    text-align: left;
+}
+
+
+
+
+/****Page title Mobile****/
+
+@media (max-width: 768px) {
+
+    .page--title--container {
+        background: linear-gradient(79deg, rgba(2,0,36,1) 0%, rgba(0,76,166,1) 61%, rgba(4,101,69,1) 100%);
+        height: 300px;
+        padding: 10px 50px;
+        overflow: hidden;
+        position: relative;
+    }
+    
+    .page--title--container h1 {
+        color: #fff;
+        font-family: "Roboto", sans-serif;
+        font-size: 5rem;
+        font-weight: 700;
+        position: absolute;
+        left: 100px;
+        top: 130px;
+        z-index: 10;
+        text-align: center;
+    }
+    
+    .page--title--container img {
+        width: 300px;
+        height: 150px;
+        position: absolute;
+        right: 50px;
+        top: 80px;
+    }
+
+
+    /***ABout us section What is IDF***/
+
+    .about--us--logo--container {
+        margin-top: 50px;
+    }
+
+    .about--us--logo--container img {
+        width: 300px;
+        padding: 10px;
+        margin: 150px 0px;
+        border: solid 1px #E4E4E4;
+        border-top-right-radius: 50px;
+        border-bottom-right-radius: 0px;
+        border-bottom-left-radius: 50px;
+
+    }
+
+    .about--us--content h1 {
+        text-align: center;
+        margin: 50px 0px;
+    }
+    
+    .about--us--container {
+        text-align: center;
+        margin: 10px 10px 50px;
+        height: auto;
+    }
+
+    /***about section What we do***/
+
+    .wwd {
+        background-color: #E4E4E4;
+        height: auto;
+        clear: both;
+        padding: 50px;
+    }
+    
+    .wwd .row .col h1 {
+        color: #0054a6;
+        text-align: center;
+        font-family: 'Roboto', sans-serif;
+        font-size: 3rem;
+        font-weight: 700;
+        margin-top: 0px;
+    }
+    
+    .wwd .row .col p {
+        text-align: left;
+        font-family: "Montserrat", sans-serif;
+        font-size: 1.8rem;
+        line-height: 1.5;
+        padding-top: 20px;
+    }
+    
+    .wwd .row .col .about--us--wwd--img {
+        text-align: center;
+        margin-top: 50px;
+    }
+    
+    .wwd .row .col .about--us--wwd--img img{
+        width: 300px;
+    }
+
+    /***About section about the event***/
+    .about--us--the--event .row .col img {
+        width: 400px;
+    }
+
+    .about--us--the--event .row .col p {
+        width: 100%;
+    }
+}
+
+@media (max-width: 660px) {
+
+    .page--title--container {
+        background: linear-gradient(79deg, rgba(2,0,36,1) 0%, rgba(0,76,166,1) 61%, rgba(4,101,69,1) 100%);
+        height: 300px;
+        padding: 10px 50px;
+        overflow: hidden;
+        position: relative;
+    }
+    
+    .page--title--container h1 {
+        color: #fff;
+        font-family: "Roboto", sans-serif;
+        font-size: 5rem;
+        font-weight: 700;
+        position: static;
+        z-index: 10;
+        text-align: center;
+        display: block;
+        padding-top: 30px;
+    }
+    
+    .page--title--container img {
+        width: 300px;
+        height: 150px;
+        position: static;
+       display: block;
+    }
+
+    /***About us section what is IDF***/
+
+    .about--us--logo--container {
+        margin-top: 50px;
+    }
+
+    .about--us--logo--container img {
+        width: 300px;
+        padding: 10px;
+        margin: 50px 0px;
+        border: solid 1px #E4E4E4;
+        border-top-right-radius: 50px;
+        border-bottom-right-radius: 0px;
+        border-bottom-left-radius: 50px;
+
+    }
+
+    .about--us--content h1 {
+        text-align: center;
+        font-size: 2.5rem;
+        margin: 20px 0px;
+    }
+
+    .about--us--content p {
+        margin: 10px 10px;
+        font-size: 1.5rem;
+    }
+    
+    .about--us--container {
+        text-align: center;
+        margin: 10px 10px 50px;
+        height: auto;
+    }
+
+    /***about section What we do***/
+
+    .wwd {
+        background-color: #E4E4E4;
+        height: auto;
+        clear: both;
+        padding: 50px;
+    }
+    
+    .wwd .row .col h1 {
+        color: #0054a6;
+        text-align: center;
+        font-family: 'Roboto', sans-serif;
+        font-size: 2.5rem;
+        font-weight: 700;
+        margin-top: 0px;
+    }
+    
+    .wwd .row .col p {
+        text-align: left;
+        font-family: "Montserrat", sans-serif;
+        font-size: 1.5rem;
+        line-height: 1.5;
+        padding-top: 20px;
+    }
+    
+    .wwd .row .col .about--us--wwd--img {
+        text-align: center;
+        margin-top: 50px;
+    }
+    
+    .wwd .row .col .about--us--wwd--img img{
+        width: 300px;
+    }
+
+    /***About us Section MMF***/
+    .about--mmf {
+        height: auto;
+        margin: 50px 0px;
+    }
+    
+    .about--mmf  h1 {
+        color: #0054a6;
+        text-align: center;
+        font-family: 'Roboto', sans-serif;
+        font-size: 2.5rem;
+        font-weight: 700;
+        padding-bottom: 20px;
+        margin: 0px 20px;
+    }
+    
+    .about--mmf p {
+        text-align: left;
+        font-family: 'Montserrat', sans-serif;
+        font-size: 1.5rem;
+        margin: 0px 20px 30px;
+    }
+
+       
+    /***About section about the event***/
+    .about--us--the--event .row .col img {
+        width: 300px;
+    }
+
+    .about--us--the--event h1 {
+        padding: 20px 0px;
+        text-align: center;
+        color: #0054a6;
+        font-family: 'Roboto', sans-serif;
+        font-size: 2.5rem;
+        font-weight: 700;
+    }
+    .about--us--the--event p{
+        text-align: left;
+        font-family: "Montserrat", sans-serif;
+        font-size: 1.5rem;
+        line-height: 1.5;
+    }
+
+    /***About us section TPA***/
+
+    .about--us--the--TPA {
+        height: 600px;
+        background-color: #e4e4e4;
+        margin-top: 100px;
+        height: auto;
+    }
+    
+    .about--us--the--TPA h1 {
+        padding: 50px 0px;
+        text-align: center;
+        color: #0054a6;
+        font-family: 'Roboto', sans-serif;
+        font-size: 2.5rem;
+        font-weight: 700;   
+    }
+    
+    .about--us--the--TPA .about--tpa--content {
+        text-align: left;
+        font-family: 'Montserrat', sans-serif;
+        font-size: 1.5rem;
+        line-height: 1.5; 
+    }
 }
