--- a/css/style.css
+++ b/css/style.css
@@ -1799,4 +1799,181 @@ form .subscribe--btn:hover{
         font-size: 1.5rem;
         line-height: 1.5; 
     }
+
+    /***Contact us***/
+
+    .contact--us--container {
+        margin: 50px 0px;
+    }
+
+    .contact--us--container .row h1 {
+        margin-left: 0px;
+        margin-top: 50px;
+        padding: 0;
+        font-family: 'Roboto',sans-serif;
+        font-weight: 700;
+        color: #0054a6;
+    }
+    
+    .contact--us--container .row .address--container, .contact--us--container .row .contact--details--container{
+        list-style: none;
+        width: 100px;
+        margin-top: 20px;
+        margin-left: 0px;
+    }
+    
+    .contact--us--container .row .address--container .address {
+        list-style: none;
+        width: 200px;
+        margin-top: 20px;
+    }
+ 
+    .contact--us--container .row .address--container .address li {
+        font-family: "Montserrat",sans-serif;
+        font-size: 1.6rem;
+    }
+    
+    
+    .contact--us--container .row .address--container .address li:nth-child(1) {
+        font-family: 'Roboto',sans-serif;
+        font-size: 1.8rem;
+        font-weight: 700;
+    }
+    
+    .contact--us--container .row .address--container .address li:nth-child(2) {
+        margin-top: 10px;
+    }
+    
+    .contact--us--container .row .contact--details--container .contacts {
+        list-style: none;
+        width: 200px;
+        margin-top: 20px;
+    }
+    
+    .contact--us--container .row .contact--details--container .contacts li {
+        font-family: "Montserrat",sans-serif;
+        font-size: 1.6rem;
+    }
+}
+
+/****Contact Us****/
+
+.contact--us--container {
+    margin: 50px;
+}
+
+.contact--us--container .row h1 {
+    margin-left: 77px;
+    margin-top: 50px;
+    padding: 0;
+    font-family: 'Roboto',sans-serif;
+    font-weight: 700;
+    color: #0054a6;
+}
+
+.contact--us--container .row .address--container, .contact--us--container .row .contact--details--container{
+    list-style: none;
+    margin-top: 20px;
+    margin-left: 50px;
+}
+
+.contact--us--container .row .address--container .address {
+    list-style: none;
+    margin-top: 20px;
+}
+
+.contact--us--container .row .address--container .address li {
+    font-family: "Montserrat",sans-serif;
+    font-size: 1.6rem;
+}
+
+
+.contact--us--container .row .address--container .address li:nth-child(1) {
+    font-family: 'Roboto',sans-serif;
+    font-size: 1.8rem;
+    font-weight: 700;
+}
+
+.contact--us--container .row .address--container .address li:nth-child(2) {
+    margin-top: 10px;
+}
+
+.contact--us--container .row .contact--details--container .contacts {
+    list-style: none;
+    margin-top: 20px;
+}
+
+.contact--us--container .row .contact--details--container .contacts li {
+    font-family: "Montserrat",sans-serif;
+    font-size: 1.6rem;
+}
+/***Google Map*****/
+
+.mapouter {
+    position: relative;
+    text-align: right;
+    width: 100%;
+    height: 400px;
+}
+
+.gmap_canvas {
+    overflow: hidden;
+    background: none !important;
+    width: 100%;
+    height: 400px;
+}
+
+.gmap_iframe {
+    height: 400px !important;
+}
+
+/***Contact us Form****/
+
+.contact--us--container .form--container {
+    margin: 50px auto;
+    width: 90%;
+}
+
+.contact--us--container .form--container .form-input{
+    margin-top: 20px;
+}
+
+.contact--us--container .form--container .form-label{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1.5rem;
+    font-weight: 700;
+}
+
+.contact--us--container .form--container .form-control{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1.5rem;
+}
+
+@media (max-width:660px) {
+    .contact--us--container .row .address--container, .contact--us--container .row .contact--details--container{
+        margin-left: 0px;
+    }
+
+    .contact--us--container .row .address--container .address {
+        margin-top: 20px;
+    }
+    
+    .contact--us--container .row .contact--details--container .contacts {
+        margin-top: 20px;
+    }
+
+    .contact--us--container .row h1 {
+        margin-left: 27px;
+        margin-top: 50px;
+        padding: 0;
+        font-family: 'Roboto',sans-serif;
+        font-weight: 700;
+        color: #0054a6;
+    }
+    
+    .contact--us--container .row .address--container .address li,  .contact--us--container .row .contact--details--container .contacts li,
+    .contact--us--container .row h1 {
+        width: 300px;
+    }
+    
 }
